--- a/css/index.css
+++ b/css/index.css
@@ -85,22 +85,131 @@ img{
   margin-top: 100px;
 }
 .slider_under{
+  z-index: 999;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   background:#EFF1F0;
-  height:300px;
-  width: 30%;
-  margin-top: 500px;
-  border: 2px solid red;
+  height:200px;
+  width: 40%;
+  margin-top: 100px;
+  /*border: 2px solid red;*/
+  position: absolute;
+  left: 50%;
+  right: 50%;
+  margin-left: -323px;
+
 }
 .li_top{
   width: 70px;
   height: 70px;
   border: 1px solid #8BABD1;
   border-radius: 70px;
+  margin-left: 100px;
+}
+.li_middle{
+  width:70px;
+  margin-left: 100px;
+}
+.li_middle
+  a:link    {color:#4C4646;}
+  a:visited {color:#4C4646;}
+  a:hover   {color:#1CAFFC;}
+  a:active  {color:#4C4646;}
+.li_bottom{
+  font-size: 10px;
+  margin-left: 100px;
+}
+.li_bottom:hover{
+  color:#1CAFFC;
+}
+.li_bottom:link  {
+  color: #D2D8E0;
+}
+.under_bg{
+  width: 100%;
+  height:300px;
+  background:#EFF1F0;
+  border: 1px solid #8BABD1;
+  margin-top: 500px;
+}
+.head_search{
+  margin-top: 20px;
+}
+.search_bar{
+  width: 500px;
+  height: 30px;
+}
+.search_btn{
+  width: 50px;
+  height: 30px;
+}
+.search_more{
+ font-size: 10px;
+ margin-left:20px;
+}
+.search_more:hover{
+  color:#1CAFFC ;
+}
+.video-box{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  height: 300px;
+}
+.video-box a{
+  margin-top: 40px;
+  display: block;
+  width: 200px;
+  height: 140px;
+}
+.video-box a img{
+  width: 200px;
+  height: 140px;
+}
+.video-box a span:hover{
+  background:url(../img/play.jpg) no-repeat;
+  background-size: 60px;
 
 }
+.video-box a span{
+  z-index: 999;
+  position: relative;
+  top: -100px;
+  display:inline-block;
+  height: 60px;
+
+  /*border-radius: 60px;*/
+  background-size: 60px;
+  background: rgba(52,52,52,0);
+}
+.information{
+  margin-top: -80px;
+  width: 1366px;
+  height: 550px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-around;
+}
+.information li img{
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 40px;
+  width: 300px;
+  height: 300px;
+  cursor: pointer;
+}
+.buttom_infomation{
+  width: 300px;
+  height: 300px;
+}
+.buttom_infomation a{
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 200;
+  color:black;
+}
+
 /*.ul_circle{
   width: 700px;
   margin-left: 245px;
@@ -130,5 +239,5 @@ img{
   width: 90px;
   height: 40px;
   border: 1px solid #8BABD1;
-  /*border-radius: 70px;*/
-}
+  /*border-radius: 70px;
+}*/
